[package]
name = "sshattrick"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
clap = { version = "4.5.1", features = ["derive"] }
crossterm = "0.27.0"
directories = "5.0.1"
ed25519-dalek = { version = "2.1.0", features = ["serde"] }
env_logger = "0.11.1"
futures = "0.3.30"
image = "0.24.8"
imageproc = "0.23.0"
include_dir = "0.7.3"
log = "0.4.20"
once_cell = "1.19.0"
rand = "0.8.5"
ratatui = "0.26.0"
russh = { git = "https://github.com/warp-tech/russh" }
russh-keys = { git = "https://github.com/warp-tech/russh" }
serde = "1.0.196"
serde_json = "1.0.113"
tokio = "1.36.0"
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
gilrs = "0.10.4"
